--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,10 @@
   height: 300px;
 }
 
+.media.message {
+
+}
+
 .media.message .avatar {
   height: 30px;
   width: 30px;
@@ -22,11 +26,13 @@
 
 .messageFade-enter {
   opacity: 0.01;
+  padding: 50px 50px 0 50px;
 }
 
 .messageFade-enter.messageFade-enter-active {
   opacity: 1;
-  transition: opacity 200ms ease-in;
+  padding: 1px 1px 0 1px;
+  transition: opacity 150ms ease-in, padding 100ms ease-out;
 }
 
 .messageFade-leave {
