--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+.avatar-select {
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
+.avatar-item:hover {
+  border: 1px solid gray;
+  border-radius: 5px;
+}
+
 .body-panel {
   overflow-y: auto;
   height: 300px;
@@ -26,13 +36,13 @@
 
 .messageFade-enter {
   opacity: 0.01;
-  padding: 50px 50px 0 50px;
+  padding: 0 50px 0 50px;
 }
 
 .messageFade-enter.messageFade-enter-active {
   opacity: 1;
-  padding: 1px 1px 0 1px;
-  transition: opacity 150ms ease-in, padding 100ms ease-out;
+  padding: 0 1px 0 1px;
+  transition: opacity 150ms ease-in, padding 150ms ease-out;
 }
 
 .messageFade-leave {
