Event notifications on user join/quit

--- a/src/App.css
+++ b/src/App.css
@@ -13,16 +13,16 @@
   height: 300px;
 }
 
-.media.message {
+.media.user-message {
 
 }
 
-.media.message .avatar {
-  height: 30px;
-  width: 30px;
+.media.user-message .avatar {
+  height: 50px;
+  width: 50px;
 }
 
-.media.message .message-text {
+.media.user-message .message-text {
   padding-top: 5px;
   padding-left: 10px;
   padding-bottom: 5px;
@@ -30,19 +30,35 @@
   word-wrap: break-word;
 }
 
-.media.message .glyphicon-time {
+.media.user-message .glyphicon-time {
   margin-right: 5px;
+}
+
+.media.event-message {
+  padding-top: 1px;
+  padding-bottom: 1px;
+  word-break: break-all; 
+  word-wrap: break-word;
+}
+
+.media.stamp-message {
+  /* TODO */
 }
 
 .messageFade-enter {
   opacity: 0.01;
-  padding: 0 50px 0 50px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .messageFade-enter.messageFade-enter-active {
   opacity: 1;
-  padding: 0 1px 0 1px;
-  transition: opacity 150ms ease-in, padding 150ms ease-out;
+  padding-left: 1px;
+  padding-right: 1px;
+  transition: 
+    opacity 150ms ease-in, 
+    padding-left 150ms ease-out,
+    padding-right 150ms ease-out;
 }
 
 .messageFade-leave {
